apps/tsfa-chat/overlays/aws-us-west-2-cc-smarsh-perf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsfa-chat
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tsfa-chat
      app.kubernetes.io/instance: tsfa-chat
  template:
    spec:
      containers:
        - name: tsfa-chat
          resources:
            limits:
              cpu: 2000m
              memory: 4G
              ephemeral-storage: 1G
            requests:
              cpu: 1000m
              memory: 3G
              ephemeral-storage: 1G
